[package]
name = "secret_sealing"
description = "A simple toolkit that provides wrappers and re-exports for modern cryptographic algorithms."
license = "0BSD OR Apache-2.0"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/PatchMixolydic/secret_sealing"
keywords = ["cryptography", "post-quantum", "quantum-safe", "simple", "bundle"]
categories = ["authentication", "cryptography"]


[dependencies]
argon2 = "0.3.1"
blake3 = "1.0.0"
chacha20poly1305 = "0.9.0"
oqs = { version = "0.7.0", features = ["serde"] }
rand_core = { version = "0.6.3", features = ["std"] }
